syntax="proto3";

package todo_service;

service TodoService {
    rpc CreateTodo(CreateTodoRequest) returns (CreateTodoResponse) {}
    rpc UpdateTodo(UpdateTodoRequest) returns (UpdateTodoResponse) {}
    rpc GetTodo(GetTodoRequest) returns (GetTodoResponse) {}
    rpc DeleteTodo(DeleteTodoRequest) returns (DeleteTodoResponse) {}
}

message CreateTodoRequest {
    string title = 1;
    string description = 2;
}

message CreateTodoResponse {
    int32 id = 1;
}

message UpdateTodoRequest {
    int32 id = 1;
    string title = 2;
    string description = 3;
    string completed = 4;
}

message UpdateTodoResponse {
    int32 id = 1;
}

message GetTodoRequest {
    int32 id = 1;
}

message GetTodoResponse {
    int32 id = 1;
    string title = 2;
    string description = 3;
    bool completed = 4;
}

message DeleteTodoRequest {
    int32 id = 1;
}

message DeleteTodoResponse {
    int32 id = 1;
}